test/errors/resolution/tupleExpandNonTuple.compopts
--detailed-errors # tupleExpandNonTuple-detailed.good
--no-detailed-errors # tupleExpandNonTuple-brief.good
